[package]
name = "nodefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
cargo-docs = "0.1.24"
futures = "0.3.28"
serde = "1.0.160"
serde_json = "1.0.96"
